--- a/Web_Hoster/docker-compose.yml
+++ b/Web_Hoster/docker-compose.yml
@@ -10,13 +10,13 @@ services:
         - ./nginx:/usr/share/nginx/html
       restart: always
 
-    apache:
+    Apache:
       image: httpd:latest
       container_name: apache_web
       ports:
         - "8081:80"
       volumes:
-        - ./apache:/usr/local/apache2/htdocs/
+        - ./Apache:/usr/local/apache2/htdocs/
       restart: always
 
 
